# screenshooter

./: .travis.yml  CMakeLists.txt  README.md  travis.yml
src/: main.cpp
src/process/: daemonizer.cpp  daemonizer.h  signal_handler.cpp  signal_handler.h
src/screen/: image_event_handler.h  image_file_writer.cpp  jpeg_file_writer.cpp  jpeg_file_writer.h  monitor.cpp  monitor.h  shooter.cpp  shooter.h
src/ui/: display.cpp  display.h  image.cpp  image.h
